--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
                             ¿No tienes cuenta? Regístrate
                         </button>
                         <div class="mt-4 p-4 bg-gray-50 rounded-lg">
-                            <p class="text-xs text-gray-600 mb-2">Demo:</p>
-                            <p class="text-xs"><strong>Admin:</strong> admin@sistema.com / admin123</p>
+                            <p class="text-xs text-gray-600 mb-2">Credenciales:</p>
+                            <p class="text-xs"><strong>Admin:</strong> ramon.rivas@me.com / admin123</p>
+                            <p class="text-xs"><strong>Demo Admin:</strong> admin@sistema.com / admin123</p>
                             <p class="text-xs"><strong>Usuario:</strong> maria@empresa.com / user123</p>
                         </div>
                     </div>
