--- a/index.html
+++ b/index.html
@@ -136,9 +136,15 @@
         <!-- Navigation Bar -->
         <nav id="navbar" class="bg-blue-600 text-white p-4 shadow-lg hidden">
             <div class="flex justify-between items-center">
-                <div>
+                <div class="flex-1">
                     <h1 class="title-responsive font-bold">Gestor de Gastos</h1>
                     <p class="text-blue-200 text-sm" id="userInfo">Bienvenido</p>
+                    <!-- Project Selector in Header -->
+                    <div class="mt-2" id="headerProjectSelector" style="display: none;">
+                        <select id="headerProjectSelect" class="text-sm bg-blue-700 text-white border border-blue-600 rounded px-2 py-1 max-w-48">
+                            <option value="">Seleccionar proyecto...</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="flex items-center gap-4">
                     <span class="text-sm bg-blue-500 px-2 py-1 rounded" id="saldoInfo">Saldo: $0.00</span>
@@ -280,19 +286,12 @@
             <!-- Dashboard Screen -->
             <div id="dashboardScreen" class="hidden">
                 <div class="p-4">
-                    <!-- Project Selection -->
-                    <div class="bg-white rounded-lg shadow p-6 mb-6">
-                        <h2 class="text-xl font-bold text-gray-800 mb-4">Seleccionar Proyecto</h2>
-                        <select id="projectSelect" class="w-full px-4 py-3 border rounded-lg text-base mb-4">
-                            <option value="">Cargando proyectos...</option>
-                        </select>
-                        
-                        <!-- Admin Only: Create Project Button -->
-                        <div id="adminControls" class="hidden">
-                            <button id="createProjectBtn" class="btn-touch bg-green-600 hover:bg-green-700 text-white rounded-lg w-full mb-4">
-                                <i class="fas fa-plus mr-2"></i> Crear Nuevo Proyecto
-                            </button>
-                        </div>
+                    <!-- Admin Only: Create Project Button -->
+                    <div id="adminControls" class="hidden bg-white rounded-lg shadow p-6 mb-6">
+                        <h2 class="text-xl font-bold text-gray-800 mb-4">Administración</h2>
+                        <button id="createProjectBtn" class="btn-touch bg-green-600 hover:bg-green-700 text-white rounded-lg w-full">
+                            <i class="fas fa-plus mr-2"></i> Crear Nuevo Proyecto
+                        </button>
                     </div>
 
                     <!-- Project Actions (visible when project selected) -->
