--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <h1 class="title-responsive font-bold">Gestor de Gastos</h1>
                     <p class="text-blue-200 text-sm" id="userInfo">Bienvenido</p>
                 </div>
-                <div class="flex items-center gap-4">
+                <div class="flex items-center gap-2">
                     <span class="text-sm bg-blue-500 px-2 py-1 rounded" id="saldoInfo">Saldo: $0.00</span>
-                    <button id="logoutBtn" class="btn-touch bg-blue-700 hover:bg-blue-800 px-3 py-2 rounded">
+                    <button id="logoutBtn" class="btn-touch bg-blue-700 hover:bg-blue-800 px-2 py-1 rounded text-sm">
                         <i class="fas fa-sign-out-alt"></i>
                     </button>
                 </div>
@@ -279,64 +279,64 @@
 
             <!-- Dashboard Screen -->
             <div id="dashboardScreen" class="hidden">
-                <div class="p-4 space-y-4">
+                <div class="p-3 space-y-3 min-h-screen">
                     
-                    <!-- Project Selection Card -->
-                    <div class="bg-white rounded-lg shadow-lg p-4">
-                        <h2 class="text-lg font-bold text-gray-800 mb-3">
-                            <i class="fas fa-folder-open mr-2 text-blue-600"></i>Proyecto Activo
+                    <!-- Project Selection Card - SIEMPRE VISIBLE -->
+                    <div class="bg-white rounded-lg shadow p-3">
+                        <h2 class="text-base font-bold text-gray-800 mb-2 flex items-center">
+                            <i class="fas fa-folder-open mr-2 text-blue-600"></i>Proyecto
                         </h2>
-                        <select id="headerProjectSelect" class="w-full px-4 py-3 border rounded-lg text-base bg-gray-50">
+                        <select id="headerProjectSelect" class="w-full px-3 py-3 border rounded-lg text-base">
                             <option value="">Seleccionar proyecto...</option>
                         </select>
                     </div>
 
-                    <!-- Quick Actions Card -->
-                    <div id="quickActionsCard" class="hidden bg-white rounded-lg shadow-lg p-4">
-                        <h2 class="text-lg font-bold text-gray-800 mb-4">
-                            <i class="fas fa-bolt mr-2 text-yellow-500"></i>Acciones Rápidas
+                    <!-- Quick Actions Card - SIEMPRE VISIBLE -->
+                    <div class="bg-white rounded-lg shadow p-3">
+                        <h2 class="text-base font-bold text-gray-800 mb-3 flex items-center">
+                            <i class="fas fa-bolt mr-2 text-orange-500"></i>Acciones
                         </h2>
-                        <div class="grid grid-cols-2 gap-3">
-                            <button id="addExpenseBtn" class="btn-touch bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white rounded-xl p-4 text-center">
-                                <i class="fas fa-receipt text-2xl mb-2 block"></i>
-                                <span class="text-sm font-medium">Registrar Gasto</span>
+                        <div class="grid grid-cols-2 gap-2">
+                            <button id="addExpenseBtn" class="btn-touch bg-blue-500 hover:bg-blue-600 text-white rounded-lg p-3 text-center">
+                                <i class="fas fa-receipt text-xl mb-1 block"></i>
+                                <span class="text-xs">Registrar Gasto</span>
                             </button>
-                            <button id="viewReportsBtn" class="btn-touch bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white rounded-xl p-4 text-center">
-                                <i class="fas fa-chart-bar text-2xl mb-2 block"></i>
-                                <span class="text-sm font-medium">Ver Reportes</span>
+                            <button id="viewReportsBtn" class="btn-touch bg-purple-500 hover:bg-purple-600 text-white rounded-lg p-3 text-center">
+                                <i class="fas fa-chart-bar text-xl mb-1 block"></i>
+                                <span class="text-xs">Ver Reportes</span>
                             </button>
                         </div>
                     </div>
 
                     <!-- Current Balance Card -->
-                    <div id="balanceCard" class="hidden bg-gradient-to-r from-green-500 to-blue-500 text-white rounded-lg shadow-lg p-6">
-                        <div class="flex items-center justify-between mb-3">
-                            <h3 class="text-lg font-bold">
-                                <i class="fas fa-wallet mr-2"></i>Saldo Actual
+                    <div id="balanceCard" class="bg-gradient-to-r from-green-500 to-blue-500 text-white rounded-lg shadow p-4">
+                        <div class="flex items-center justify-between mb-2">
+                            <h3 class="text-base font-bold flex items-center">
+                                <i class="fas fa-wallet mr-2"></i>Saldo
                             </h3>
-                            <i class="fas fa-dollar-sign text-2xl opacity-70"></i>
+                            <i class="fas fa-dollar-sign text-xl opacity-70"></i>
                         </div>
-                        <div class="text-4xl font-bold mb-2" id="currentBalance">$0.00</div>
-                        <p class="text-sm opacity-90">Presupuesto + Depósitos - Gastos</p>
+                        <div class="text-3xl font-bold mb-1" id="currentBalance">$0.00</div>
+                        <p class="text-xs opacity-90">Presupuesto + Depósitos - Gastos</p>
                     </div>
 
                     <!-- Recent Expenses Card -->
-                    <div id="recentCard" class="hidden bg-white rounded-lg shadow-lg p-4">
-                        <h3 class="text-lg font-bold text-gray-800 mb-4">
-                            <i class="fas fa-history mr-2 text-gray-600"></i>Gastos Recientes
+                    <div id="recentCard" class="bg-white rounded-lg shadow p-3">
+                        <h3 class="text-base font-bold text-gray-800 mb-3 flex items-center">
+                            <i class="fas fa-history mr-2 text-gray-500"></i>Gastos Recientes
                         </h3>
-                        <div id="recentExpenses" class="space-y-3">
-                            <p class="text-gray-500 text-center py-4">No hay gastos registrados</p>
+                        <div id="recentExpenses" class="space-y-2">
+                            <p class="text-gray-500 text-center py-3 text-sm">No hay gastos registrados</p>
                         </div>
                     </div>
 
                     <!-- Admin Controls Card -->
-                    <div id="adminControls" class="hidden bg-white rounded-lg shadow-lg p-4">
-                        <h2 class="text-lg font-bold text-gray-800 mb-4">
-                            <i class="fas fa-cog mr-2 text-gray-600"></i>Administración
+                    <div id="adminControls" class="hidden bg-white rounded-lg shadow p-3">
+                        <h2 class="text-base font-bold text-gray-800 mb-3 flex items-center">
+                            <i class="fas fa-cog mr-2 text-gray-500"></i>Admin
                         </h2>
-                        <button id="createProjectBtn" class="btn-touch bg-green-600 hover:bg-green-700 text-white rounded-lg w-full p-3">
-                            <i class="fas fa-plus mr-2"></i> Crear Nuevo Proyecto
+                        <button id="createProjectBtn" class="btn-touch bg-green-600 hover:bg-green-700 text-white rounded-lg w-full p-2">
+                            <i class="fas fa-plus mr-2"></i>Crear Proyecto
                         </button>
                     </div>
 
