--- a/index-clean.html
+++ b/index-clean.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Gastos</title>
+    <title>IDACONN - Gestor de Gastos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <style>
@@ -19,7 +19,7 @@
     <nav class="bg-blue-600 text-white p-4">
         <div class="flex justify-between items-center">
             <div>
-                <h1 class="text-xl font-bold">Gestor de Gastos</h1>
+                <h1 class="text-xl font-bold">IDACONN - Gestor de Gastos</h1>
                 <p class="text-sm opacity-90" id="userInfo">Usuario</p>
             </div>
             <div class="flex items-center gap-2">
@@ -37,7 +37,9 @@
     <div id="loginScreen" class="min-h-screen flex items-center justify-center p-4">
         <div class="bg-white rounded-lg shadow-xl p-8 w-full max-w-md">
             <div class="text-center mb-8">
-                <i class="fas fa-receipt text-4xl text-blue-600 mb-4"></i>
+                <img src="https://page.gensparksite.com/v1/base64_upload/b2869f30ba62ebf5b884d127f1705e49" 
+                     alt="IDACONN Logo" 
+                     class="mx-auto mb-4 h-16 w-auto object-contain">
                 <h1 class="text-2xl font-bold text-gray-800">Iniciar Sesión</h1>
             </div>
             
